istio/AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-auth
spec:
  selector:
    matchLabels:
      app: keycloak
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: [ "*" ]
